Fix keyboard horizontal stretch

--- a/src/components/InteractivePiano.css
+++ b/src/components/InteractivePiano.css
@@ -3,18 +3,9 @@
   box-sizing: border-box;
   /* border-top: 10px solid #904ae9; */
   position: relative;
-  margin: auto;
+  margin: 0;
   touch-action: none;
   user-select: none;
-}
-
-.interactive-piano__piano-container::after {
-  content: '';
-  width: 100%;
-  height: 5px;
-  background-color: rgba(68, 68, 68, 0.1);
-  position: absolute;
-  top: 0;
 }
 
 .interactive-piano__keyboard-container {
